minor spacing and sizing fixes on homepage

--- a/sass/article.scss
+++ b/sass/article.scss
@@ -1,5 +1,5 @@
 .byline {
-  font-size: 18px;
+  font-size: 16px;
   margin: .5em 0;
 
   @media(max-width: 360px) {
