--- a/sass/globals.scss
+++ b/sass/globals.scss
@@ -102,7 +102,7 @@ ul.no-markers {
 
 h3.headline {
   font-size: 26px;
-  margin: 0.3em 0 0 0;
+  margin: 0.25em 0 0 0;
 }
 
 h4.headline {
