--- a/sass/header.scss
+++ b/sass/header.scss
@@ -25,7 +25,7 @@
   }
 
   .header-logo {
-    height: 160px;
+    height: 140px;
     padding-top: 40px;
     text-align: left;
     background-color: #222;
@@ -35,7 +35,7 @@
     }
 
     img {
-      width: 400px;
+      width: 340px;
     }
   }
 
